# kerl

./: .gitignore  README.md  communication_protocol.md
Grader-1/: Dockerfile  README.md  disagg_proxy_demo.py  docker-compose.yml  docker-entrypoint.sh  kv_events.sh  pyproject.toml
Grader-1/scripts/: start_all.sh  start_decode.sh  start_prefill.sh  start_proxy.sh
Grader-1/scripts/logs/: .nfs81d8a8cc3ccfb9f400000355  .nfsbb4cf661f2fb7eab00000354
Grader-1/src/: command_queue.py  main.py  reward_queue.py
docs/: HOTSWAP_LORA.md
environments/kernelbench-env/: .gitignore  deploy.sh  modal_app.py  orchestrator.py  pyproject.toml  utilities.py
finetuning/: Finetuning.ipynb
inference/: Inference.ipynb
kernelgen/: .env.example  .gitignore  FINDINGS.md  debug_renderer.py  kernelgentinker-multiturn.py  kernelgentinker-sft-infer.py  kernelgentinker-sft.py  kernelgentinker.py  main.py  multi_turn_queue.py  pyproject.toml
kernelgen-tinker/: demo_output.txt  kernelgentinker-sft-infer.py  pyproject.toml
kernelgen/SVD/: FINDINGS.MD
kernelgen/SVD/scripts/: analyze_tinker_lora.py  delta_W_Matrix_Heatmap.py  plot_variance_tinker.py  run_analysis.sh  run_heatmap.sh  run_histogram.sh  run_variance.sh  weight_distribution_plot.py
kernelgen/skyrl_tinker/: AGENTS.md  kernelgentinker-multiturn.py  multi_turn_queue.py  pyproject.toml  start_server.sh
serving/: .env.template  .gitignore  Distributed.MD  README.md  main.py  parser.py  pyproject.toml  run_generator_4gpu.sh  run_generator_8gpu.sh  run_model.py  run_trainer_4gpu.sh  run_trainer_8gpu.sh  servicebus_web.py  validation.py
serving/DisGenerator/: .env.example  DisGenerator.MD  Orchestrator.MD  VERIFIER_SETUP.md  batch_orchestrator.py  config.py  data_processing.py  disagg_proxy.py  policy_manager.py  prompts.jsonl  pyproject.toml  reward_functions.py  simple_client.py  solution_verifier.py  utilities.py
serving/DisGenerator/scripts/: start_all.sh  start_decode.sh  start_prefill.sh  start_proxy.sh  stop_all.sh
serving/DisTrainer/: AGENTS.MD  CHANGELOG.md  FUTURE.MD  MOE_COMPATIBILITY.md  README.md  SETUP.md  __init__.py  generate_training_data.py  mesh.py  requirements.txt  server.py  train.py  trainer.py
serving/DisTrainer/components/: __init__.py  checkpoint.py  data_loader.py  loss.py  metrics.py
serving/DisTrainer/config/: train_config.toml
serving/DisTrainer/scripts/: download_assets.py
serving/DisTrainer/wandb/: latest-run
serving/DisTrainer/wandb/offline-run-20260105_230355-nphco0wj/: run-nphco0wj.wandb
serving/DisTrainer/wandb/offline-run-20260105_230355-nphco0wj/files/: requirements.txt
serving/DisTrainer/wandb/run-20251229_020306-zla5mh83/: run-zla5mh83.wandb
serving/DisTrainer/wandb/run-20251229_020306-zla5mh83/files/: wandb-metadata.json
serving/GRPO/: run_grpo.py
serving/ToolGRPOTrainer/: .env.template  azure_command_sender.py  code_command_sender.py  command_sender.py  custom_grpo.py  grader_command_sender.py
serving/ToolGRPOTrainer/wandb/: latest-run
serving/ToolGRPOTrainer/wandb/run-20251025_001106-o60w1be4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
serving/ToolGRPOTrainer/wandb/run-20251025_001106-o60w1be4/files/code/serving/ToolGRPOTrainer/: run_custom_grpo.py
serving/ToolGRPOTrainer/wandb/run-20251025_001106-o60w1be4/files/media/table/: completions_19_73e83a660c0e3ae3a679.table.json  completions_29_edd6da4f2eb75813fe9b.table.json  completions_39_57d3937879d31994b8e0.table.json  completions_49_3a0e45254accf479b0df.table.json  completions_59_cb7a5d907d2971b86b12.table.json  completions_69_415d081f10237d127057.table.json  completions_79_7fac3601e29c2cd9742c.table.json  completions_89_bb4c73f764c9ab2539d0.table.json  completions_99_a2313b1a8fee74ea894a.table.json  completions_9_f9a98964de4617a551e5.table.json
serving/ToolGRPOTrainer/wandb/run-20251026_202916-7m6oasiu/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
serving/ToolGRPOTrainer/wandb/run-20251026_202916-7m6oasiu/files/code/serving/ToolGRPOTrainer/: run_custom_grpo.py
serving/ToolGRPOTrainer/wandb/run-20251026_202916-7m6oasiu/files/media/table/: completions_19_8e865a91a0156b8f5082.table.json  completions_29_7446544d8b4a1667dcfc.table.json  completions_39_817567851e54c9fe795c.table.json  completions_49_41c4ad9ea428a0957f92.table.json  completions_59_e38f9734aaa5d0dab807.table.json  completions_69_a29892375ff8957a030e.table.json  completions_79_14a1ae28ecb87cd42e15.table.json  completions_89_e6fe5368e610357e9b6c.table.json  completions_99_9d178b8f26d598171f3b.table.json  completions_9_0d6696bfbe667453529c.table.json
serving/communication/: azure_command_sender.py  code_command_sender.py  command_sender.py
serving/features/: container_feature.md  custom_grpo_training.md  feature_documentation.md  grpo_training.md  prompts.md
serving/kernels/: __init__.py
serving/reward_fn/: char_reward.py  format_reward.py  grader_reward.py  tool_reward.py
serving/scripts/: download_base_model.py
training/: .env.example  pyproject.toml
training/synthetic_trajectories/: curriculum_task.py
training/synthetic_trajectories/synthetic_traj_gpt/: batch_68d9b50575888190af7973725c98c090_output.jsonl  batch_68d9b5069ba48190a921113844324914_output.jsonl  batch_68d9b50787448190b77b877c3fa04b13_output.jsonl
training/training/synthetic_trajectories/batches/: easy.jsonl  medium.jsonl  medium_easy.jsonl
training/training/training_script/: clean_traj.py  generation.py  sft_qwen_lora.py
training/training_env/: __init__.py
(+8 files in other folders)
