[project]
name = "serve-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-servicebus>=7.12.0",
    "datasets>=4.0.0",
    "flashinfer-python>=0.2.11.post3",
    "openai>=1.90.0",
    "peft>=0.18.0",
    "python-dotenv>=1.0.0",
    "tensorboard>=2.20.0",
    "tomli>=2.3.0",
    "trl>=0.22.2",
    "vllm>=0.10.0",
    "wandb>=0.22.1",
]
