[project]
name = "training-env"
version = "0.1.0"
description = "Training utilities environment"
authors = [
    { name = "RL Envs Team" }
]
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "openai",
    "python-dotenv",
    "safe>=0.4",
    "safetensors>=0.6.2",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
