[project]
name = "kernelbench-env"
version = "0.1.0"
description = "GPU kernel execution environment for benchmarking Triton kernels on H100"
requires-python = ">=3.10,<3.13"
dependencies = [
    "modal>=0.63.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "triton>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
required-environments = ["sys_platform == 'linux'"]
